docs-archive/apache-airflow-providers-amazon/9.40.0/_sources/_api/tests/system/amazon/aws/example_mwaa_serverless/index.rst.txt
tests.system.amazon.aws.example_mwaa_serverless
===============================================

.. py:module:: tests.system.amazon.aws.example_mwaa_serverless


Attributes
----------

.. autoapisummary::

   tests.system.amazon.aws.example_mwaa_serverless.DAG_ID
   tests.system.amazon.aws.example_mwaa_serverless.ROLE_ARN_KEY
   tests.system.amazon.aws.example_mwaa_serverless.WORKFLOW_YAML
   tests.system.amazon.aws.example_mwaa_serverless.STOPPABLE_WORKFLOW_YAML
   tests.system.amazon.aws.example_mwaa_serverless.sys_test_context_task
   tests.system.amazon.aws.example_mwaa_serverless.test_context
   tests.system.amazon.aws.example_mwaa_serverless.test_run


Module Contents
---------------

.. py:data:: DAG_ID
   :value: 'example_mwaa_serverless'


.. py:data:: ROLE_ARN_KEY
   :value: 'ROLE_ARN'


.. py:data:: WORKFLOW_YAML
   :value: Multiline-String

   .. raw:: html

      <details><summary>Show Value</summary>

   .. code-block:: python

      """systest_mwaa_serverless:
        schedule: null
        description: "System test: S3 key sensor on workflow definition"
        tasks:
          check_file:
            task_id: check_file
            operator: airflow.providers.amazon.aws.sensors.s3.S3KeySensor
            bucket_name: {bucket}
            bucket_key: workflow.yaml
      """

   .. raw:: html

      </details>



.. py:data:: STOPPABLE_WORKFLOW_YAML
   :value: Multiline-String

   .. raw:: html

      <details><summary>Show Value</summary>

   .. code-block:: python

      """systest_mwaa_serverless_stoppable:
        schedule: null
        description: "System test: long-running workflow for stop testing"
        tasks:
          wait_for_stop:
            task_id: wait_for_stop
            operator: airflow.providers.amazon.aws.sensors.s3.S3KeySensor
            bucket_name: {bucket}
            bucket_key: never_exists.txt
            poke_interval: 30
            timeout: 600
            soft_fail: true
      """

   .. raw:: html

      </details>



.. py:data:: sys_test_context_task

.. py:data:: test_context
   :value: None


.. py:data:: test_run

